force-app/main/default/objects/HAM_Trip_Details__c/HAM_Trip_Details__c.object-meta.xml
<CustomObject>
    <description>Stores information about staff trips including purpose, dates, stakeholders, meetings, and related contact reports. Used to track planning, execution, and outcomes of advancement or business trips.</description>
    <label>Trip Details</label>
    <nameField>
        <displayFormat>TRIP-{00000}</displayFormat>
        <label>Trip Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>