force-app/main/default/objects/HAM_Trip_Details__c/fields/HAM_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HAM_End_Date_Time__c</fullName>
    <description>Planned or actual end date and time of the trip. Must be later than the Start Date/Time.</description>
    <inlineHelpText>Planned or actual end date and time of the trip. Must be later than the Start Date/Time.</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>