force-app/main/default/objects/HAM_Trip_Details__c/fields/HAM_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HAM_Start_Date_Time__c</fullName>
    <description>Planned or actual start date and time of the trip.</description>
    <inlineHelpText>Planned or actual start date and time of the trip.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>