force-app/main/default/objects/HAM_Trip_Details__c/fields/HAM_Title__c.field-meta.xml
<CustomField>
    <fullName>HAM_Title__c</fullName>
    <description>User-friendly title that describes the trip purpose or location.</description>
    <inlineHelpText>User-friendly title that describes the trip purpose or location.</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>