force-app/main/default/objects/HAM_Trip_Details__c/fields/HAM_Trip_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trip_Status__c</fullName>
    <description>This field allows users to select and assign a status to their trip.</description>
    <inlineHelpText>1. Planned - Searching and scheduling meetings
2. Cancelled - Due to some reason have to cancel the entire trip
3. Rescheduled - Moved the Trip by few days here and there
4. Completed - Completed the trip by meeting the constituents</inlineHelpText>
    <label>HAM Trip Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>